--- a/templates/Register.html
+++ b/templates/Register.html
@@ -1,12 +1,34 @@
 {%extends 'layout1.html'%}
 {%block content%}
-<form style="display: flex;flex-direction: column;align-items: center;justify-content: center;" method="post" action="/registeruser">
+
+
+<div class="container-fluid tm-container-content tm-mt-60">
+
+    <form style="display: flex;flex-direction: column;align-items: center;justify-content: center;" method="post" action="/registeruser">
+        <div class="form1">
+            <div >Name : </div>
+            <input class="form-control tm-search-input" style="margin: 3px;border :1px solid black;border-radius: 12px;" type="text" placeholder="Name" name="name" required>
+        </div class="form1">
+        <div class="form1">
+            <div >Username : </div>
+            <input class="form-control tm-search-input" style="margin: 3px;border :1px solid black;border-radius: 12px;" type="text" placeholder="Username" name="username" required>
+        </div class="form1">
+        <div class="form1">
+            <div >Password : </div>
+            <input class="form-control tm-search-input" style="margin: 3px; border: 1px solid black;border-radius: 12px;" type="password" placeholder="Password" name="password" required>
+        </div>
+        <div class="form1">
+            <div >Email : </div>
+            <input class="form-control tm-search-input" style="margin: 3px; border: 1px solid black;border-radius: 12px;" type="email" placeholder="xxx@xxx.com" name="email" required>
+        </div>
+        <div class="form1">
+            <div >Phone : </div>
+            <input class="form-control tm-search-input" style="margin: 3px; border: 1px solid black;border-radius: 12px;" type="tel" name="phone" placeholder="+xx xxx xxx xx xx" pattern="[+]{1}[0-9]{11,14}" required>
+        </div>
+        <button class="btn btn-outline-success tm-search-btn" style="margin: 3px;" type="submit">
+            Sign Up
+        </button>
+    </form> 
     
-    <div class="form1"><h4>Name : </h3><input type="text" name="name" id="" width="3rem" required></div>
-    <div class="form1"><h4>Username :</h3><input type="text" name="username" id="" width="3rem"  required></div>
-    <div class="form1"><h4>Password :</h3><input type="text" name="password" id="" width="3rem" required></div>
-    <div class="form1"><h4>Email : </h3><input type="text" name="email" id=""width="3rem"  required></div>
-    <div class="form1"><h4>Phone : </h3><input type="tel" name="phone" id=""  pattern="[+]{1}[0-9]{11,14}"  width="3rem" required></div>
-    <button type="submit" style="background-color: rgb(93, 93, 214);border:0;border-radius: 1rem;padding: 1rem; font-family: Arial, Helvetica, sans-serif;color: aliceblue;">Register</button>
-</form>
+</div>
 {%endblock%}
